syntax = "proto3";

package booking_service;

service ArchiveService{
  // Archive
  rpc CreateArchive(CreatedArchive) returns (Archive);
  rpc GetArchive(FieldValueReq) returns (Archive);
  rpc GetAllArchives(GetAllReq) returns (ArchivesType);
  rpc UpdateArchive(UpdateArchiveReq) returns (Archive);
  rpc DeleteArchive(FieldValueReq) returns (StatusRes);
}

//

message Archive{
  int64 Id = 1;
  int64 DoctorAvailabilityId = 2;
  string  StartTime = 3;
  string EndTime = 4;
  string PatientProblem = 5;
  string Status = 6;
  string PaymentType = 7;
  float PaymentAmount = 8;
  string CreatedAt = 9;
  string UpdatedAt = 10;
  string DeletedAt = 11;
}

message ArchivesType{
  int64 Count = 1;
  repeated Archive Archives = 2;
}

message CreatedArchive{
  int64 DoctorAvailabilityId = 1;
  string  StartTime = 2;
  string EndTime = 3;
  string PatientProblem = 4;
  string Status = 5;
  string PaymentType = 6;
  float PaymentAmount = 7;
}

message UpdateArchiveReq{
  string Field = 1;
  string Value = 2;
  int64 DoctorAvailabilityId = 3;
  string StartTime = 4;
  string EndTime = 5;
  string PatientProblem = 6;
  string Status = 7;
  string PaymentType = 8;
  float PaymentAmount = 9;
}

message FieldValueReq {
  string Field = 1;
  string Value = 2;
  bool DeleteStatus = 3;
}

message StatusRes {
  bool Status = 1;
}

message GetAllReq {
  string Field = 1;
  string Value = 2;
  bool DeleteStatus = 3;
  uint64 Page = 4;
  uint64 Limit = 5;
  string OrderBy = 6;
}